Sat Jan  4 22:44:00 2014  Charlie Somerville  <charliesome@ruby-lang.org>

	* struct.c (rb_struct_set): return assigned value from setter method
	  rather than struct object. [Bug #9353] [ruby-core:59509]

	* test/ruby/test_struct.rb (test_setter_method_returns_value): add test

Sat Jan  4 21:44:31 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_gc.rb (TestGc#test_latest_gc_info): use
	  GC.stat(:key) instead of GC.stat.

Sat Jan  4 19:15:29 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (rsock_syserr_fail_host_port): use format flags,
	  '+' to inspect, ' ' to quote unprintables.

	* ext/socket/socket.c (rsock_syserr_fail_path): ditto.

	* ext/socket/socket.c (rsock_syserr_fail_raddrinfo): ditto.

	* ext/socket/socket.c (rsock_syserr_fail_host_port): add errno
	  argument version and use rb_syserr_fail_str() instead of
	  rb_sys_fail_str() with restoring errno.

	* ext/socket/socket.c (rsock_syserr_fail_path): ditto, and
	  rb_syserr_fail().

	* ext/socket/socket.c (rsock_sys_fail_sockaddr): ditto, use
	  rsock_syserr_fail_raddrinfo().

	* ext/socket/socket.c (rsock_sys_fail_raddrinfo): ditto.

	* ext/socket/socket.c (setup_domain_and_type): ditto.

Sat Jan  4 17:18:58 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (RubyVM::OPTS): get rid of a garbage character.

Sat Jan  4 10:17:54 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/rinda/ring.rb (Rinda::RingFinger#make_socket):  Use
	  ipv4_multicast_ttl option for portability.

Sat Jan  4 10:15:47 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/rinda/ring.rb (Rinda::RingFinger#make_socket):  Use
	  ipv4_multicast_loop option for portability.  Patch by Jeremy Evans.
	  [ruby-trunk - Bug #9351]

Fri Jan  3 19:09:00 2014  Eric Wong  <normalperson@yhbt.net>

	* ext/socket/socket.c (rsock_sys_fail_host_port): save and restore errno
	  before calling rb_sys_fail_str to prevent [BUG] errno == 0.
	  Patch by Eric Wong. [ruby-core:59498] [Bug #9352]
