@@ -115,7 +115,7 @@ class RDoc::MethodAttr < RDoc::CodeObject
   end
 
   def == other # :nodoc:
-    super or self.class == other.class and full_name == other.full_name
+    equal?(other) or self.class == other.class and full_name == other.full_name
   end
 
   ##
@@ -181,8 +181,8 @@ class RDoc::MethodAttr < RDoc::CodeObject
       parent != kernel && !searched.include?(kernel)
 
     searched.each do |ancestor|
-      next if parent == ancestor
       next if String === ancestor
+      next if parent == ancestor
 
       other = ancestor.find_method_named('#' << name) ||
               ancestor.find_attribute_named(name)
